# emotion_network_data

./: .gitignore  LICENSE  README.md  README_jp.md  pyproject.toml
network_data/: association_edgelist_eng.csv  association_edgelist_jp.csv  similarity_edgelist_eng.csv  similarity_edgelist_jp.csv  words_eng.csv  words_jp.csv
notebooks/: view.ipynb
