[tool.poetry]
name = "emotion-network-data"
version = "0.1.0"
description = ""
authors = ["FumitakaIwaki <iwaki2323a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
